fixed styling and overflowing for comments

--- a/react-app/src/components/comments/comments.css
+++ b/react-app/src/components/comments/comments.css
@@ -8,7 +8,7 @@
     padding-top: 7px;
     padding-bottom: 7px;
     width: 100%;
-    height: 42px;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -17,12 +17,13 @@
 }
 
 .post-bottom-comment-box{
-    width: 365px;
+    width: 350px;
     margin-left: 5px;
     border: none;
-    color: #8E8E8E;
-    font-size: 15px;
+    color: #ADADAD;
+    font-size: 14px;
     background-color: #FFFFFF;
+    outline: none;
 }
 
 .post-comment-btn{
@@ -43,4 +44,41 @@
 
 .post-comment-btn:hover{
     cursor: pointer;
+}
+
+.modal-bottom-comment-sect{
+    border-bottom-right-radius: 10px;
+    border-top: 1px solid #D6D6D6;
+    width: 100%;
+    height: 42px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+}
+
+.form-input-comment-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.modal-comment-btn{
+    border: none;
+    background-color: transparent;
+    font-size: 14px;
+    font-weight: 600;
+    color: #0095F7;
+}
+
+.modal-comment-btn:hover{
+    cursor: pointer;
+}
+
+.modal-comments-unactive{
+    border: none;
+    background-color: transparent;
+    font-size: 14px;
+    font-weight: 600;
+    color: #B8E2FD;
 }
