--- a/react-app/src/components/postModal/modalPost.css
+++ b/react-app/src/components/postModal/modalPost.css
@@ -50,6 +50,7 @@ body{
     max-width: 500px;
     background-color: white;
     border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .top-modal-profile-header{
@@ -65,13 +66,15 @@ body{
 }
 
 .modal-comments-container{
-    height: 83.3%;
+    height: 88.5%;
     width: 100%;
     overflow-x: auto;
 }
 
 .modal-add-comments-container{
-    height: 10%;
+    height: 5%;
+    display: flex;
+    align-items: flex-end;
 }
 
 .modal-outside-container{
